fix: changed the background color of the back and eye icon to be more visible in a dark background

--- a/src/assets/stylesheets/fullscreen-page.css
+++ b/src/assets/stylesheets/fullscreen-page.css
@@ -45,8 +45,23 @@
     height: 40px;
     padding: 5px;
   }
+  .icon-button1 {
+    margin: 0 8px; /* Adjust the button spacing as needed */
+    z-index: 1;
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    background-color: white;
+    border-radius: 20px;
+  }
+
 
   .icon-button:hover {
+    background-color: hsla(0, 0%, 100%, 0.262);
+    border-radius: 20px;
+    padding: auto; 
+  }
+  .icon-button1:hover {
     background-color: hsla(0, 0%, 100%, 0.262);
     border-radius: 20px;
     padding: auto; 
